samples/_failures_safe/1761553825_421901_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a28c072d.c: In function ‘main’:
./samples/SAFE/__tmp_a28c072d.c:151:44: error: expected ‘)’ at end of input
  151 |         printf("\nDeterminant: %.2f\n", det
      |               ~                            ^
      |                                            )
./samples/SAFE/__tmp_a28c072d.c:151:9: error: expected declaration or statement at end of input
  151 |         printf("\nDeterminant: %.2f\n", det
      |         ^~~~~~
./samples/SAFE/__tmp_a28c072d.c:151:9: error: expected declaration or statement at end of input
